--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Shaded Profile Widget Flat Responsive Widget Template :: w3layouts</title>
+<title>Lê Thị Thư</title>
 <!-- Custom Theme files -->
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all"/>
 <!-- for-mobile-apps -->
@@ -17,37 +17,53 @@
 </head>
 <body>
 <!--profile start here-->
-<h1 class="heading-1">My Profile</h1>
+<!-- <h1 class="heading-1">Thông Tin Của Tôi</h1> -->
 <div class="profile">
 	<div class="wrap">
 		<div class="profile-main">
 			<div class="profile-pic wthree">
-				<img src="images/p1.png" alt="">
-				<h2>Thu LE</h2>
-				<p>Web Designer</p>
+				<img src="images/358c46125e8494dacd95.jpg" alt="">
+				<h2>Lê Thị Thư</h2>
+				<p style="font-weight: bold;">Sống trên đời: Lạc quan, yêu thương và đối xử với nhau bằng sự chân thành</p>
 			</div>
 			<div class="w3-message">
 				<h5>About Meee</h5>
-				<p>Chào bạn ! Chúng mình là ADC Studio.Liên hệ cho chúng mình nhé ^_^</p>
+				<p>
+					Member of Communication Department at Ecom Club FTU -<strong>CLB Thương mại điện tử ĐH Ngoại thương</strong> </p>
+				<p>Works at TYS -<strong>Hội đồng hương Sinh viên Tân Yên tại Hà Nội</strong> </p>
 			</div>
 			<div class="w3ls-touch">
 				<h5>Get In Touch</h5>
 				<div class="social">	
 					<ul>
-						<li><a href="https://www.facebook.com/ADCstudio.info"><i class="fa fa-facebook" aria-hidden="true"></i> <p>Connected To Facebook</p></a></li>
-						<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i> <p>Connected To Twitter</p></a></li>
-						<li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i> <p>Connected To Linkedin</p></a></li>
-						<li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i> <p>Connected To Google+</p></a></li>
+						<li><a href="https://www.facebook.com/lethu.291" class="center"><img class="logo" src="./images/icons8-facebook-144.png"> <p >Connected - Facebook</p></a></li>
+						<li><a href="https://zalo.me/0353811722"><img class="logo" src="./images/icons8-zalo-144.png"> <p>Connected - Zalo</p></a></li>
+						<li><a onclick="copyToClipboard('19036403608012')"><img class="logo" src="./images/TechcomBank logo-01.png"> <p>Copy - TechcomBank : 19036403608012</p></a></li>
+						<li><a href="tel:0353811722"><img class="logo" src="./images/pngwing.com.png"> <p>Call 0353811722</p></a></li>
 					</ul>
 				</div>
 			</div>
 		</div>
 		<div class="wthree_footer_copy">
-			<p>© 2020 Namecard. All rights reserved | Created by <a href="https://adcstudio.info">ADC Studio</a></p>
+			<p>© 2021 Chienbg200</a></p>
 		</div>
 	</div>
 </div>
 <!--profile end here-->
+ 
+ 
 
 </body>
+<script>
+	function copyToClipboard(text) {
+		navigator.clipboard.writeText(text).then(function() {
+		alert('Copying to clipboard was successful!');
+		}, function(err) {
+		alert('Could not copy text: ', err);
+		});
+	}
+
+</script>
+<script type="text/javascript" src="snowstorm.js"></script>
+
 </html>
