--- a/index.html
+++ b/index.html
@@ -64,6 +64,6 @@
 	}
 
 </script>
-<script type="text/javascript" src="snowstorm.js"></script>
+<script type="text/javascript" src="snowstorm2.js"></script>
 
 </html>
